--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,65 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/css" rel="stylesheet">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/animate.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/magnific-popup.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.css">
+    <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/ionicons.min.css"> -->
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.timepicker.css">
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/flaticon.css">
+    <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css"> -->
+    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/style.css">
+    <style type="text/css">
+        .scrollax-performance,
+        .scrollax-performance *,
+        .scrollax-performance *:before,
+        .scrollax-performance *:after {
+            pointer-events: none !important;
+            -webkit-animation-play-state: paused !important;
+            animation-play-state: paused !important;
+        }
+        ;
+    </style>
+    <!-- <script type="text/javascript" charset="UTF-8" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/common.js.download"></script> -->
+    <!-- <script type="text/javascript" charset="UTF-8" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/util.js.download"></script> -->
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery-migrate-3.0.1.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/popper.min.js.download" type="text/javascript"></script> -->
+    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap.min.js.download" type="text/javascript"></script> -->
+    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.easing.1.3.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.waypoints.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.stellar.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.magnific-popup.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.animateNumber.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/scrollax.min.js.download" type="text/javascript"></script>
+    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js" type="text/javascript"></script> -->
+    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/google-map.js.download" type="text/javascript"></script> -->
+    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/main.js.download" type="text/javascript"></script> -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script async="" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js(1)" type="text/javascript"></script>
+    <script type="text/javascript">
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-23581568-13');
+    </script>
   </body>
 </html>
