--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,12 @@
     <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/google-map.js.download" type="text/javascript"></script> -->
     <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/main.js.download" type="text/javascript"></script> -->
 
+    <!-- me -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
+
     <script async="" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js(1)" type="text/javascript"></script>
     <script type="text/javascript">
         window.dataLayer = window.dataLayer || [];
