--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
     <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/flaticon.css">
     <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css"> -->
     <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/style.css">
+
+    <!-- bs 4.3.1 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
     <style type="text/css">
         .scrollax-performance,
         .scrollax-performance *,
