--- a/public/index.html
+++ b/public/index.html
@@ -1,86 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/css" rel="stylesheet">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/animate.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/magnific-popup.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.css">
-    <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/ionicons.min.css"> -->
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.timepicker.css">
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/flaticon.css">
-    <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css"> -->
-    <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/style.css">
 
-    <!-- bs 4.3.1 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    
-    <style type="text/css">
-        .scrollax-performance,
-        .scrollax-performance *,
-        .scrollax-performance *:before,
-        .scrollax-performance *:after {
-            pointer-events: none !important;
-            -webkit-animation-play-state: paused !important;
-            animation-play-state: paused !important;
-        }
-        ;
-    </style>
-    <!-- <script type="text/javascript" charset="UTF-8" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/common.js.download"></script> -->
-    <!-- <script type="text/javascript" charset="UTF-8" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/util.js.download"></script> -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery-migrate-3.0.1.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/popper.min.js.download" type="text/javascript"></script> -->
-    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap.min.js.download" type="text/javascript"></script> -->
-    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.easing.1.3.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.waypoints.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.stellar.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.magnific-popup.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.animateNumber.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/scrollax.min.js.download" type="text/javascript"></script>
-    <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js" type="text/javascript"></script> -->
-    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/google-map.js.download" type="text/javascript"></script> -->
-    <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/main.js.download" type="text/javascript"></script> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/css" rel="stylesheet">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/open-iconic-bootstrap.min.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/animate.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.theme.default.min.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/magnific-popup.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/ionicons.min.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.timepicker.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/flaticon.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css">
+  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/style.css">
+  <style type="text/css">
+    .scrollax-performance,
+    .scrollax-performance *,
+    .scrollax-performance *:before,
+    .scrollax-performance *:after {
+      pointer-events: none !important;
+      -webkit-animation-play-state: paused !important;
+      animation-play-state: paused !important;
+    }
 
-    <!-- me -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    ;
+  </style>
+  <!-- <script type="text/javascript" charset="UTF-8"
+    src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/common.js.download"></script> -->
+  <!-- <script type="text/javascript" charset="UTF-8"
+    src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/util.js.download"></script> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery-migrate-3.0.1.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/popper.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.easing.1.3.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.waypoints.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.stellar.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/owl.carousel.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.magnific-popup.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/aos.js.download" type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.animateNumber.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/scrollax.min.js.download"
+    type="text/javascript"></script>
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js" type="text/javascript"></script>
+  <!-- <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/google-map.js.download"
+    type="text/javascript"></script> -->
+  <script src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/main.js.download" type="text/javascript"></script>
+
+  <!-- me -->
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
 
-    <script async="" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js(1)" type="text/javascript"></script>
-    <script type="text/javascript">
-        window.dataLayer = window.dataLayer || [];
+  <script async="" src="./Winkel - Free Bootstrap 4 Template by Colorlib_files/js(1)" type="text/javascript"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-        gtag('config', 'UA-23581568-13');
-    </script>
-  </body>
+    gtag('config', 'UA-23581568-13');
+  </script>
+</body>
+
 </html>
