--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/bootstrap-datepicker.css">
   <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/jquery.timepicker.css">
   <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/flaticon.css">
-  <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css">
+  <!-- <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/icomoon.css"> -->
   <link rel="stylesheet" href="./Winkel - Free Bootstrap 4 Template by Colorlib_files/style.css">
   <style type="text/css">
     .scrollax-performance,
